--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '2'
+version: '2.1'
 services:
   db:
-    image: postgres:11
+    image: postgres:13.0-alpine
     user: root
     environment:
       - POSTGRES_PASSWORD=odoo
@@ -12,13 +12,13 @@ services:
         - ./postgresql:/var/lib/postgresql/data
 
   odoo13:
-    image: odoo:13
+    image: odoo:17
     user: root
     depends_on:
       - db
     ports:
-      - "10013:8069"
-      - "20013:8072" # live chat
+      - "8070:8069"
+      - "8073:8072" # live chat
     tty: true
     command: --
 #    command: odoo scaffold /mnt/extra-addons/test_module
