--- a/etc/odoo.conf
+++ b/etc/odoo.conf
@@ -57,7 +57,7 @@ addons_path = /mnt/extra-addons
 ; ------
 data_dir = /etc/odoo
 
-admin_passwd = minhng.info
+admin_passwd = devman2020devman
 
 ; ==============================
 ; | HTTP Service Configuration |
